--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -1,11 +1,5 @@
-- name: update web servers
-  hosts: localhost
-  remote_user: root
-
+---
+- hosts: localhost
   tasks:
-  - name: get s3 rule
-    amazon.aws.aws_s3:
-      bucket: se-jenkins-artifactory
-      object: vprofile-V16.war
-      dest: /home/ubuntu/ansible/vprofile-V16.war
-      mode: get
+    - debug:
+        msg: This is task one
