--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -1,5 +1,10 @@
 ---
 - hosts: localhost
+
   tasks:
-    - debug:
-        msg: This is task one
+  - name: get s3 rule
+    amazon.aws.aws_s3:
+      bucket: se-jenkins-artifactory
+      object: vprofile-V16.war
+      dest: /home/ubuntu/ansible/vprofile-V16.war
+      mode: get
